# gray

./: .gitignore  Makefile.am  README  bootstrap  configure.ac
doc/: Doxyfile.in  Makefile.am  mainpage.md
mod/: Makefile.am  gray.c
